Changed file, CI push

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Generate Allure report
         run:
-          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report
+          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
